tmpl/test/corpus/template.txt
================================================================================
Raw text only
================================================================================

Hello, world!

--------------------------------------------------------------------------------

(document
  (raw_text))

================================================================================
Expression tag
================================================================================

Hello, {{ name }}!

--------------------------------------------------------------------------------

(document
  (raw_text)
  (expression_tag
    (code))
  (raw_text))

================================================================================
Statement tag
================================================================================

{% let x = 1; %}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag
    (code))
  (raw_text))

================================================================================
Template comment
================================================================================

{# this is a comment #}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (comment_tag
    (comment_content))
  (raw_text))

================================================================================
Empty template comment
================================================================================

{##}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (comment_tag)
  (raw_text))

================================================================================
Multiple tags
================================================================================

<p>{% greeting = "hi"; %}{{ greeting }}</p>

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag
    (code))
  (expression_tag
    (code))
  (raw_text))

================================================================================
Whitespace-stripping open marker
================================================================================

  {%- let x = 1; %}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag
    (code))
  (raw_text))

================================================================================
Whitespace-stripping close marker
================================================================================

{% let x = 1; -%}
next line

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag
    (code))
  (raw_text))

================================================================================
Whitespace-stripping on both sides
================================================================================

  {%- let x = 1; -%}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag
    (code))
  (raw_text))

================================================================================
Expression tag with trim markers
================================================================================

  {{- name -}}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (expression_tag
    (code))
  (raw_text))

================================================================================
For loop in template
================================================================================

{% for (let i in items): %}{{ items[i] }}
{% endfor %}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag
    (code))
  (expression_tag
    (code))
  (raw_text)
  (statement_tag
    (code))
  (raw_text))

================================================================================
Nested braces in expression
================================================================================

{{ obj.key }}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (expression_tag
    (code))
  (raw_text))

================================================================================
Raw text with braces that are not tag openers
================================================================================

{ not a tag } and {another}

--------------------------------------------------------------------------------

(document
  (raw_text))

================================================================================
Empty document
================================================================================



--------------------------------------------------------------------------------

(document
  (raw_text))

================================================================================
Only raw text, no tags
================================================================================

<html><body>plain template</body></html>

--------------------------------------------------------------------------------

(document
  (raw_text))

================================================================================
Comment with open-trim marker
================================================================================

{#- this is a comment #}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (comment_tag
    (comment_content))
  (raw_text))

================================================================================
Comment with close-trim marker
================================================================================

{# this is a comment -#}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (comment_tag
    (comment_content))
  (raw_text))

================================================================================
Comment with both trim markers
================================================================================

{#- both sides -#}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (comment_tag
    (comment_content))
  (raw_text))

================================================================================
Statement tag with lstrip-suppress marker
================================================================================

  {%+ let x = 1; %}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag
    (code))
  (raw_text))

================================================================================
Statement tag with lstrip-suppress marker and trim-right closer
================================================================================

  {%+ let x = 1; -%}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag
    (code))
  (raw_text))

================================================================================
Empty statement tag
================================================================================

{%%}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag)
  (raw_text))

================================================================================
Empty expression tag
================================================================================

{{}}

--------------------------------------------------------------------------------

(document
  (raw_text)
  (expression_tag)
  (raw_text))

================================================================================
Statement tag with implicit EOF close
================================================================================

{%
unclosed

--------------------------------------------------------------------------------

(document
  (raw_text)
  (statement_tag
    (code)
    (eof_close)))

================================================================================
Unclosed expression tag
================================================================================

{{
unclosed

--------------------------------------------------------------------------------

(document
  (raw_text)
  (expression_tag
    (code)
    (MISSING "-}}")))

================================================================================
Unclosed comment tag
================================================================================

{#
unclosed

--------------------------------------------------------------------------------

(document
  (raw_text)
  (comment_tag
    (comment_content)
    (MISSING "-#}")))
